working on setting Biological Measurements

--- a/src/main/resources/bundles/en/encounter.properties
+++ b/src/main/resources/bundles/en/encounter.properties
@@ -197,7 +197,9 @@ addHaplotype = Add haplotype
 addMsMarkers = Add microsatellite markers
 setMsMarkers = Add/update microsatellite markers
 setHaplotype = Add/update haplotype
+setBiologicalMeasurement = Add/update biological measurement
 addGeneticSex = Add genetic sex determination
+addBiologicalMeasurement = Add biological measurement
 haplotype = Haplotype
 analysisID = Analysis ID
 processingLabTaskID = Processing lab task ID
