first attempt at some default values for biological measurements based on stable isoptopes

--- a/src/main/resources/bundles/commonConfiguration.properties
+++ b/src/main/resources/bundles/commonConfiguration.properties
@@ -208,3 +208,19 @@ tissueType1 = Fecal sample
 tissueType2 = Mucus sample
 tissueType3 = Blood sampe
 tissueType4 = Parasite sample
+
+#biological measurement types
+biologicalMeasurementType0 = 13C
+biologicalMeasurementType1 = 15N
+biologicalMeasurementType2 = 34S
+
+#corresponding biological measurement units
+biologicalMeasurementUnits0 = ppm
+biologicalMeasurementUnits1 = ppm
+biologicalMeasurementUnits2 = ppm
+
+#corresponding biological measurement sampling protocols
+biologicalMeasurementSamplingProtocols0 = mass spectrometer
+biologicalMeasurementSamplingProtocols1 = mass spectrometer
+biologicalMeasurementSamplingProtocols2 = mass spectrometer
+
