making progress get/set of BiologicalMeasurements complete

--- a/src/main/resources/bundles/en/encounter.properties
+++ b/src/main/resources/bundles/en/encounter.properties
@@ -163,6 +163,7 @@ resetTaxonomy = Reset genus and species
 resetLifeStage = Reset life stage
 lifeStage = Life stage
 measurements = Measurements
+measurement = measurement
 #The notAvailable value must have a space dividing two words to be used by the EncounterSetGenusSpecies servlet
 notAvailable = Not available
 tissueSamples = Biological Samples
