more get/set BiologicalMeasurement UI refinements

--- a/src/main/resources/bundles/en/encounter.properties
+++ b/src/main/resources/bundles/en/encounter.properties
@@ -198,9 +198,9 @@ addHaplotype = Add haplotype
 addMsMarkers = Add microsatellite markers
 setMsMarkers = Add/update microsatellite markers
 setHaplotype = Add/update haplotype
-setBiologicalMeasurement = Add/update biological measurement
+setBiologicalMeasurement = Add/update biological/chemical measurement
 addGeneticSex = Add genetic sex determination
-addBiologicalMeasurement = Add biological measurement
+addBiologicalMeasurement = Add biological/checmical measurement
 haplotype = Haplotype
 analysisID = Analysis ID
 processingLabTaskID = Processing lab task ID
