setting better stable isotope example sampling protocols

--- a/src/main/resources/bundles/commonConfiguration.properties
+++ b/src/main/resources/bundles/commonConfiguration.properties
@@ -220,7 +220,8 @@ biologicalMeasurementUnits1 = ppm
 biologicalMeasurementUnits2 = ppm
 
 #corresponding biological measurement sampling protocols
-biologicalMeasurementSamplingProtocols0 = mass spectrometer
-biologicalMeasurementSamplingProtocols1 = mass spectrometer
-biologicalMeasurementSamplingProtocols2 = mass spectrometer
+biologicalMeasurementSamplingProtocols0 = Lipids extracted
+biologicalMeasurementSamplingProtocols1 = No lipids extracted, corrected
+biologicalMeasurementSamplingProtocols2 = No lipids extracted, uncorrected
+
 
