--- a/src/main/resources/bundles/en/individuals.properties
+++ b/src/main/resources/bundles/en/individuals.properties
@@ -72,6 +72,7 @@ values = Attributes
 analyses = Analyses
 haplotype = Haplotype
 analysisID = Analysis ID
+measurement = measurement
 locus = Locus
 allele = Allele
 msMarkers = Microsatellite Markers
