first crack at biomeasurement encounter search...not working

--- a/src/main/resources/bundles/en/encounterSearch.properties
+++ b/src/main/resources/bundles/en/encounterSearch.properties
@@ -80,3 +80,4 @@ geneticSex = Sex was determined from genetic analysis as
 releaseDate=Release Date
 releaseDateFormat=Use format dd/mm/yyyy
 generateGeneGIS = Generate a GeneGIS CSV file for genetic-spatial analysis.
+biomeasurements = Biological/Chemical Measurements
