adding measurement and biomeasurement support to indie search

--- a/src/main/resources/bundles/en/individualSearch.properties
+++ b/src/main/resources/bundles/en/individualSearch.properties
@@ -77,3 +77,4 @@ measurements=Measurement was recorded at least once as
 metalTags=A metal tag was recorded at least once
 releaseDate=Release date
 releaseDateFormat=Use format dd/mm/yyyy
+biomeasurements = Biological/Chemical Measurements
