--- a/src/main/resources/bundles/commonConfiguration.properties
+++ b/src/main/resources/bundles/commonConfiguration.properties
@@ -55,39 +55,9 @@ urlToFooterGraphic=/${pom.artifactId}-${pom.version}/images/lib_bottom.gif
 footerGraphicAlt=Powered by ECOCEAN USA Shepherd Project
 
 
-#Google Service keys for Search and Maps
+#Google Service keys for Search
 googleSearchKey=ABQIAAAAmb5-A-em_VabiiSEGZpvmRRTprTin5h_0-odPYUGB6h2YV9tQBSSk7LPXt9jxgaFm7Pt0GVfRimDdw
 
-#DataNucleus parameters for object persistence
-
-# the following two lines create a connection to an embedded derby database.
-datanucleus.ConnectionDriverName=org.apache.derby.jdbc.EmbeddedDriver
-datanucleus.ConnectionURL=jdbc:derby:shepherd_derby_database;create=true
-
-# The following two lines create a connection to a SQLite database.
-# You will also need to add the JDBC JAR file for your SQLite version to /WEB-INF/lib.
-#datanucleus.ConnectionDriverName=org.sqlite.JDBC
-#datanucleus.ConnectionURL=jdbc:sqlite:target/shepherd_sqlite_database
-
-
-# The following three lines create a connection to a MySQL database.
-# You will also need to add the JDBC JAR file for your MySQL version to /WEB-INF/lib.
-#datanucleus.ConnectionDriverName=com.mysql.jdbc.Driver
-#datanucleus.ConnectionURL=jdbc:mysql://localhost:3306/shepherd
-
-# The following lines can be used for PostgreSQL data storage.
-# You will also need to add the JDBC JAR file for your PostgreSQL version to /WEB-INF/lib.
-#datanucleus.ConnectionDriverName=org.postgresql.Driver
-#datanucleus.ConnectionURL = jdbc:postgresql://localhost:5432/myDatabaseName
-
-javax.jdo.PersistenceManagerFactoryClass=org.datanucleus.api.jdo.JDOPersistenceManagerFactory
-datanucleus.ConnectionUserName=shepherd
-datanucleus.ConnectionPassword=shepherd
-datanucleus.autoCreateSchema=true
-datanucleus.NontransactionalRead=true
-datanucleus.Multithreaded=true
-datanucleus.RestoreValues=true
-datanucleus.storeManagerType=rdbms
 
 
 #pattern recognition
