--- a/src/main/resources/bundles/jdoconfig.properties
+++ b/src/main/resources/bundles/jdoconfig.properties
@@ -12,7 +12,7 @@
 # The following two lines create a connection to an H2 database.
 # You will also need to add the JDBC JAR file for your H2 version to /WEB-INF/lib.
 datanucleus.ConnectionDriverName=org.h2.Driver
-datanucleus.ConnectionURL=jdbc:h2:'shepherd_h2_database'
+datanucleus.ConnectionURL=jdbc:h2:shepherd_h2_database
 
 # The following three lines create a connection to a MySQL database.
 # You will also need to add the JDBC JAR file for your MySQL version to /WEB-INF/lib.
