--- a/src/main/resources/bundles/jdoconfig.properties
+++ b/src/main/resources/bundles/jdoconfig.properties
@@ -1,8 +1,8 @@
 #DataNucleus parameters for object persistence
 
 # The following two lines create a connection to an embedded Apache Derby database.
-#datanucleus.ConnectionDriverName=org.apache.derby.jdbc.EmbeddedDriver
-#datanucleus.ConnectionURL=jdbc:derby:shepherd_derby_database;create=true
+datanucleus.ConnectionDriverName=org.apache.derby.jdbc.EmbeddedDriver
+datanucleus.ConnectionURL=jdbc:derby:shepherd_derby_database;create=true
 
 # The following two lines create a connection to a SQLite database.
 # You will also need to add the JDBC JAR file for your SQLite version to /WEB-INF/lib.
@@ -11,8 +11,8 @@
 
 # The following two lines create a connection to an H2 database.
 # You will also need to add the JDBC JAR file for your H2 version to /WEB-INF/lib.
-datanucleus.ConnectionDriverName=org.h2.Driver
-datanucleus.ConnectionURL=jdbc:h2:shepherd_h2_database
+#datanucleus.ConnectionDriverName=org.h2.Driver
+#datanucleus.ConnectionURL=jdbc:h2:shepherd_h2_database
 
 # The following three lines create a connection to a MySQL database.
 # You will also need to add the JDBC JAR file for your MySQL version to /WEB-INF/lib.
