--- a/src/main/resources/bundles/en/encounter.properties
+++ b/src/main/resources/bundles/en/encounter.properties
@@ -226,6 +226,7 @@ value = Value
 units = Units
 samplingProtocol = Sampling Protocol
 occurrenceID = Occurrence ID
+newOccurrenceID = New Occurrence ID
 
 #define the module JSP files to import
 #files must be placed in the encounters directory of the Shepherd Project webapp (i.e., in the same directory as encounter.jsp)
