--- a/src/main/resources/bundles/commonConfiguration.properties
+++ b/src/main/resources/bundles/commonConfiguration.properties
@@ -194,4 +194,6 @@ biologicalMeasurementSamplingProtocols0 = Lipids extracted
 biologicalMeasurementSamplingProtocols1 = No lipids extracted, corrected
 biologicalMeasurementSamplingProtocols2 = No lipids extracted, uncorrected
 
-
+#Maximum uploadable media size in megabytes (MB)
+#This value is used for encounter images and videos as well as for file associations added to a MarkedIndividual.
+maxMediaSize = 40
