--- a/src/main/resources/bundles/commonConfiguration.properties
+++ b/src/main/resources/bundles/commonConfiguration.properties
@@ -102,7 +102,7 @@ isCatalogEditable = true
 showEXIF = true
 
 #show taxonomy
-showTaxonomy = false
+showTaxonomy = true
 
 #for multi-species libraries, fill out the genus and species for each supported animal type, starting with genusSpecies0
 #genusSpecies0=genus specificEpithet
@@ -171,6 +171,34 @@ encounterState2=unidentifiable
 #limit Encounter.locationID to these values
 #locationID0 = location0
 #locationID1 = location 1
+
+#associated country if observation
+country0 = American Samoa 
+country1 = Australia 
+country2 = Cook Islands
+country3 = Federated States of Micronesia
+country4 = Fiji
+country5 = France 
+country6 = French Polynesia
+country7 = Guam
+country8 = Kiribati
+country9 = Marshall Islands
+country10 = Nauru
+country11 = New Caledonia
+country12 = New Zealand 
+country13 = Niue
+country14 = Northern Mariana Islands
+country15 = Palau
+country16 = Papua New Guinea 
+country17 = Samoa
+country18 = Solomon Islands
+country19 = Tokelau
+country20 = Tonga
+country21 = Tuvalu
+country22 = United Kingdom 
+country23 = United States of America 
+country24 = Vanuatu
+country25 = Wallis and Futuna
 
 #tissue sample types
 tissueType0 = Tissue sample
