Encounter.country submission part 2

--- a/src/main/resources/bundles/commonConfiguration.properties
+++ b/src/main/resources/bundles/commonConfiguration.properties
@@ -102,7 +102,7 @@ isCatalogEditable = true
 showEXIF = true
 
 #show taxonomy
-showTaxonomy = true
+showTaxonomy = false
 
 #for multi-species libraries, fill out the genus and species for each supported animal type, starting with genusSpecies0
 #genusSpecies0=genus specificEpithet
@@ -171,6 +171,9 @@ encounterState2=unidentifiable
 #limit Encounter.locationID to these values
 #locationID0 = location0
 #locationID1 = location 1
+
+#whether to show country field as a location
+showCountry = true
 
 #associated country if observation
 country0 = American Samoa 
