refining genus species functionality

--- a/src/main/resources/bundles/commonConfiguration.properties
+++ b/src/main/resources/bundles/commonConfiguration.properties
@@ -105,6 +105,9 @@ showEXIF = true
 showTaxonomy = false
 
 #for multi-species libraries, fill out the genus and species for each supported animal type, starting with genusSpecies0
+#you can alow for more complex options and descriptors, such as:
+#example 1: genusSpecies0 = Megaptera novaengilae, Humpback whale -- this example with the comma delimiter helps users pick the correct scientific name from a list with more common names
+#example 2: genusSpecies1 = Unknown_whale_and_dolphin
 #genusSpecies0=genus specificEpithet
 #genusSpecies1=genus specificEpithet
 #genusSpecies2=genus specificEpithet
