Adding biological sampleID filter for Encounter Search

--- a/src/main/resources/bundles/en/encounterSearch.properties
+++ b/src/main/resources/bundles/en/encounterSearch.properties
@@ -84,3 +84,4 @@ biomeasurements = Biological/Chemical Measurements
 unassignedEncounter = Include only encounters with no assigned Individual ID.
 country = Country
 noCountries = No countries defined in configuration files.
+tissueSampleID = Biological sample ID contains or equals
