--- a/src/main/resources/bundles/commonConfiguration.properties
+++ b/src/main/resources/bundles/commonConfiguration.properties
@@ -48,10 +48,10 @@ htmlShortcutIcon=images/favicon.ico
 htmlAuthor=My Research Group
 
 #URL to the graphic to be displayed at the top of every page through header.jsp
-urlToMastheadGraphic=/latestgenegis/images/masthead.jpg
+urlToMastheadGraphic=/${pom.artifactId}-${pom.version}/images/masthead.jpg
 
 #URL to the graphic to be displayed at the bottom of every page through footer.jsp
-urlToFooterGraphic=/latestgenegis/images/lib_bottom.gif
+urlToFooterGraphic=/${pom.artifactId}-${pom.version}/images/lib_bottom.gif
 footerGraphicAlt=Powered by ECOCEAN USA Shepherd Project
 
 
@@ -143,7 +143,7 @@ maximumDepthInMeters = true
 showSize = true
 
 #project-related variables
-application.version=3.1.0-RELEASE
+application.version=${pom.version}
 
 #genetic parameters
 numLoci = 14
@@ -176,7 +176,7 @@ encounterState2=unidentifiable
 #locationID1 = location 1
 
 #whether to show country field as a location
-showCountry = false
+showCountry = true
 
 #associated country if observation
 country0 = American Samoa 
