--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.ecocean</groupId>
   <artifactId>shepherd</artifactId>
-  <version>3.1.0-RELEASE</version>
+  <version>3.2.0-EXPERIMENTAL</version>
   <packaging>war</packaging>
 
   <properties>
