--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,12 @@
     </dependency>
     
     <dependency>
+    	<groupId>net.sf.opencsv</groupId>
+    	<artifactId>opencsv</artifactId>
+    	<version>2.0</version>
+</dependency>
+    
+    <dependency>
         <groupId>com.h2database</groupId>
         <artifactId>h2</artifactId>
         <version>1.3.168</version>
