--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -482,6 +482,11 @@
       <servlet-name>OccurrenceSetIndividualCount</servlet-name>
       <servlet-class>org.ecocean.servlet.OccurrenceSetIndividualCount</servlet-class>
   </servlet>
+  
+      <servlet>
+        <servlet-name>DeleteAllDataPermanently</servlet-name>
+        <servlet-class>org.ecocean.servlet.DeleteAllDataPermanently</servlet-class>
+  </servlet>
 
   <servlet>
     <servlet-name>EncounterSetMaximumElevation</servlet-name>
@@ -710,6 +715,11 @@
     <servlet-mapping>
       <servlet-name>TissueSampleSetHaplotype</servlet-name>
       <url-pattern>/TissueSampleSetHaplotype</url-pattern>
+  </servlet-mapping>
+  
+      <servlet-mapping>
+        <servlet-name>DeleteAllDataPermanently</servlet-name>
+        <url-pattern>/DeleteAllDataPermanently</url-pattern>
   </servlet-mapping>
   
       <servlet-mapping>
@@ -1266,6 +1276,23 @@
       <role-name>admin</role-name>
 
     </auth-constraint>
+  </security-constraint>
+  
+    <security-constraint>
+      <display-name>Manager Security Constraint</display-name>
+      <web-resource-collection>
+        <web-resource-name>Protected Area</web-resource-name>
+        <!-- Define the context-relative URL(s) to be protected -->
+  
+  
+        <url-pattern>/DeleteAllDataPermanently</url-pattern>
+  
+      </web-resource-collection>
+      <auth-constraint>
+        <!-- Anyone with one of the listed roles may access this area -->
+        <role-name>destroyer</role-name>
+  
+      </auth-constraint>
   </security-constraint>
 
 
