Reduced compiler warnings: changed a POM property, & removed duplicate dependency.

--- a/src/main/resources/bundles/commonConfiguration.properties
+++ b/src/main/resources/bundles/commonConfiguration.properties
@@ -48,10 +48,10 @@ htmlShortcutIcon=images/favicon.ico
 htmlAuthor=My Research Group
 
 #URL to the graphic to be displayed at the top of every page through header.jsp
-urlToMastheadGraphic=/${pom.artifactId}-${pom.version}/images/masthead.jpg
+urlToMastheadGraphic=/${project.artifactId}-${project.version}/images/masthead.jpg
 
 #URL to the graphic to be displayed at the bottom of every page through footer.jsp
-urlToFooterGraphic=/${pom.artifactId}-${pom.version}/images/lib_bottom.gif
+urlToFooterGraphic=/${project.artifactId}-${project.version}/images/lib_bottom.gif
 footerGraphicAlt=Powered by ECOCEAN USA Shepherd Project
 
 
@@ -170,7 +170,7 @@ maximumDepthInMeters = true
 showSize = true
 
 #project-related variables
-application.version=${pom.version}
+application.version=${project.version}
 
 #genetic parameters
 numLoci = 14
