--- a/src/main/resources/bundles/commonConfiguration.properties
+++ b/src/main/resources/bundles/commonConfiguration.properties
@@ -109,7 +109,7 @@ maxTriangleRotation=30
 C=0.99
 
 #Other common properties used for some data export (e.g. Encounter Search Excel export)
-citation=Marshall, Andrea and Holmberg, Jason. MantaMatcher Photo-identification Library, 2011. http://www.mantamatcher.org
+citation=Marshall, Andrea and Holmberg, Jason. MantaMatcher Photo-identification Library, 2011-2013. http://www.mantamatcher.org
 institutionCode=ECOCEAN
 catalogCode=MANTA
 
@@ -175,7 +175,7 @@ maximumDepthInMeters = true
 showSize = true
 
 #project-related variables
-application.version=shepherd-2.4.0-RELEASE
+application.version=shepherd-3.2.0-RELEASE
 
 #genetic parameters
 numLoci = 14
@@ -221,7 +221,8 @@ locationID13 = Maldives
 locationID14 = Peru
 
 #whether to show country field as a location
-showCountry = true
+showCountry = false
+
 #associated country if observation
 country0 = American Samoa 
 country1 = Australia 
