--- a/src/main/resources/bundles/commonConfiguration.properties
+++ b/src/main/resources/bundles/commonConfiguration.properties
@@ -35,7 +35,7 @@ allowAdoptions = true
 #email addresses and parameters
 sendEmailNotifications=true
 autoEmailAddress=webmaster@mantamatcher.org
-newSubmissionEmail=submissions@mantamatcher,org
+newSubmissionEmail=submissions@mantamatcher.org
 mailHost=localhost
 removeEmailString=Do you want to REMOVE your email address from this database? Click the link below to remove it. You will no longer receive updates on your encounters.
 
@@ -103,7 +103,7 @@ useSpotPatternRecognition=false
 
 #Modified Groth algorithm parameters for spot pattern recognition
 R=8
-epsilon=0.01 
+epsilon=0.01
 sizelim=0.9
 maxTriangleRotation=30
 C=0.99
@@ -224,30 +224,30 @@ locationID14 = Peru
 showCountry = false
 
 #associated country if observation
-country0 = American Samoa 
-country1 = Australia 
+country0 = American Samoa
+country1 = Australia
 country2 = Cook Islands
 country3 = Federated States of Micronesia
 country4 = Fiji
-country5 = France 
+country5 = France
 country6 = French Polynesia
 country7 = Guam
 country8 = Kiribati
 country9 = Marshall Islands
 country10 = Nauru
 country11 = New Caledonia
-country12 = New Zealand 
+country12 = New Zealand
 country13 = Niue
 country14 = Northern Mariana Islands
 country15 = Palau
-country16 = Papua New Guinea 
+country16 = Papua New Guinea
 country17 = Samoa
 country18 = Solomon Islands
 country19 = Tokelau
 country20 = Tonga
 country21 = Tuvalu
-country22 = United Kingdom 
-country23 = United States of America 
+country22 = United Kingdom
+country23 = United States of America
 country24 = Vanuatu
 country25 = Wallis and Futuna
 
