Initial version of Batch Upload feature.

--- a/src/main/resources/bundles/commonConfiguration.properties
+++ b/src/main/resources/bundles/commonConfiguration.properties
@@ -29,6 +29,13 @@ GlobalUniqueIdentifierPrefix=MY_CATALOG:MY_SPECIES:
 # set wikiLocation to point to your wiki to enable integration, e.g.
 #wikiLocation=http://localhost:8080/wiki/doku.php?id=
 
+# Whether to display and allow batch updates (true/false).
+allowBatchUpload = false
+# Batch data processing plugin to use.
+#batchUploadPlugin = org.ecocean.batch.Plugin_MantaMatcher
+# Progress/page refresh interval (seconds) during batch upload.
+batchUploadProgressRefresh = 5
+
 #whether to display and allow adoptions - set to true for yes and false for no
 allowAdoptions = false
 
@@ -139,6 +146,15 @@ showTaxonomy = false
 #genusSpecies1=genus specificEpithet
 #genusSpecies2=genus specificEpithet
 
+#defined sexes
+sex0=unknown
+sex1=female
+sex2=male
+
+#defined living statuses
+livingStatus0=alive
+livingStatus1=dead
+
 #show lifeStage
 showLifestage = true
 
@@ -202,3 +218,8 @@ encounterState2=unidentifiable
 #locationID0 = location0
 #locationID1 = location 1
 
+#Sample preservation methods
+#preservationMethod0=method0
+preservationMethod0=ethanol
+preservationMethod1=frozen
+preservationMethod2=dry stabilized
