--- a/src/main/resources/bundles/en/header.properties
+++ b/src/main/resources/bundles/en/header.properties
@@ -42,6 +42,7 @@ userWiki = User Wiki
 software = Client Software
 grid = Grid
 general = General
+batchUpload = Batch Upload
 tapirLink = TapirLink
 iptLink = GBIF IPT
 photoKeywords = Photo Keywords
