--- a/pom.xml
+++ b/pom.xml
@@ -251,6 +251,11 @@
                   <artifactId>slf4j-api</artifactId>
                   <version>1.6.1</version>
         </dependency>
+    <dependency>
+      <groupId>net.sf.opencsv</groupId>
+      <artifactId>opencsv</artifactId>
+      <version>2.3</version>
+    </dependency>
     
     
   </dependencies>
