--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,18 @@
     </dependency>
     
     <dependency>
+      <groupId>org.apache.shiro</groupId>
+      <artifactId>shiro-core</artifactId>
+      <version>1.2.1</version>
+</dependency>
+
+<dependency>
+  <groupId>org.apache.shiro</groupId>
+  <artifactId>shiro-web</artifactId>
+  <version>1.2.1</version>
+</dependency>
+    
+    <dependency>
         <groupId>ch.qos.logback</groupId>
         <artifactId>logback-classic</artifactId>
         <version>1.0.0</version>
@@ -111,6 +123,12 @@
 	<groupId>org.apache.commons</groupId>
 	<artifactId>commons-math</artifactId>
 	<version>2.2</version>
+</dependency>
+
+<dependency>
+	<groupId>mysql</groupId>
+	<artifactId>mysql-connector-java</artifactId>
+	<version>5.1.21</version>
 </dependency>
             
     <dependency>
