Clarified spreadsheet support for CSV files on batch upoad page.

--- a/src/main/resources/bundles/batchUpload.properties
+++ b/src/main/resources/bundles/batchUpload.properties
@@ -115,7 +115,7 @@ gui.step2.enums.list11=<span class="dataType">Media</span> <span class="colHeade
 gui.step2.enums.list12=<span class="dataType">Sample</span> <span class="colHeader">Tissue Type</span> data must be one of: <span class="enum">{0}</span>
 gui.step2.enums.list13=<span class="dataType">Sample</span> <span class="colHeader">Preservation Method</span> data must be one of: <span class="enum">{0}</span>
 
-gui.step2.text2=CSV files output from most spreadsheet applications should work, provided you ensure the date columns are formatted correctly.
+gui.step2.text2=CSV files can be output from most spreadsheet applications, but you should ensure date columns are formatted correctly. Also, if your text has any irregular characters (e.g. accented characters) be careful to make sure your spreadsheet outputs correctly in UTF-8 format.<ul><li>LibreOffice Calc supports UTF-8 CSV files.</li><li>OpenOffice Calc supports UTF-8 CSV files.</li><li>Google Spreadsheet supports UTF-8 CSV files <em>(File / Download as / Comma Separated Values)</em>.</li><li>Microsoft Excel does <strong>not</strong> support UTF-8 CSV files.</li></ul>
 
 gui.step3.title=Step 3
 
