--- a/pom.xml
+++ b/pom.xml
@@ -302,7 +302,7 @@
    <artifactId>maven-javadoc-plugin</artifactId>
    <version>2.8</version>
 <configuration>
-	        <reportOutputDirectory>${project.basedir}/target/${pom.artifactId}-${pom.version}</reportOutputDirectory>
+	        <reportOutputDirectory>${project.basedir}/target/${project.artifactId}-${project.version}</reportOutputDirectory>
 	        <destDir>javadoc</destDir>
 	        <show>private</show>
 	    </configuration>
@@ -412,14 +412,7 @@
           </execution>
         </executions>
       </plugin>
-            <plugin>
-              <groupId>org.apache.maven.plugins</groupId>
-              <artifactId>maven-compiler-plugin</artifactId>
-              <configuration>
-                <source>1.5</source>
-                <target>1.5</target>
-              </configuration>
-            </plugin>
+
            
       <plugin>
         <artifactId>maven-failsafe-plugin</artifactId>
