--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,12 @@
   <artifactId>shiro-web</artifactId>
   <version>1.2.1</version>
 </dependency>
+
+<dependency>
+	<groupId>commons-dbcp</groupId>
+	<artifactId>commons-dbcp</artifactId>
+	<version>1.4</version>
+</dependency>
     
     <dependency>
         <groupId>ch.qos.logback</groupId>
