Clarified batch upload description: inability to modify existing data.

--- a/src/main/resources/bundles/batchUpload.properties
+++ b/src/main/resources/bundles/batchUpload.properties
@@ -68,7 +68,7 @@ gui.warnings.text=The following (non-critical) issues were found while trying to
 # -----------------------------------------
 gui.title=Batch Upload
 
-gui.overview=Batch upload allows you to upload large quantities of data in a short number of steps, making it very useful to importing large data sets. At minimum it imports from two data files, one for individuals, the other for encounters, but it can also import associated photographs/videos and tissue samples. It is recommended to test the functionality with a small amount of data initially to understand how it operates, and to verify that it performs as expected.
+gui.overview=Batch upload allows you to upload large quantities of new data in a short number of steps, making it very useful to import large data sets. (It does not currently support modifying existing data.) At minimum it imports from two data files, one for individuals, the other for encounters, but it can also import associated photographs/videos and tissue samples. It is recommended to test the functionality with a small amount of data initially to understand how it operates, and to verify that it performs as expected.
 
 gui.step1.title=Step 1
 
