--- a/src/main/resources/bundles/commonConfiguration.properties
+++ b/src/main/resources/bundles/commonConfiguration.properties
@@ -174,8 +174,8 @@ maximumDepthInMeters = true
 #show size for encounters
 showSize = true
 
-#project-related variables
-application.version=shepherd-3.2.0-RELEASE
+#project-related
+application.version=shepherd-3.3.0-RELEASE
 
 #genetic parameters
 numLoci = 14
@@ -280,9 +280,55 @@ maxMediaSize = 40
 #Security roles available in this Shepherd Project
 #These must be mapped to URLs in the Apache Shiro configuration filter of web.xml
 role0 = admin
-role1 = destroyer
+role1 = imageProcessor
+role2 = manager
+role3 = reviewer
+role4 = local
+role5 = researcher
+role6 = approve
+role7 = identifier
+role8 = adoption
+role9 = Mozambique
+role10 = SouthAfrica
+role11 = AustraliaEast
+role12 = AustraliaWest
+role13 = Brazil
+role14 = Ecuador
+role15 = Thailand
+role16 = Myanmar
+role17 = Indonesia
+role18 = Palau
+role19 = Japan
+role20 = MexicoRevillagigedos
+role21 = Hawaii
+role22 = Maldives
+role23 = Peru
+role24 = NewZealand
 
 #Security role definitions, as displayed in user.jsp. These help keep track of how and why roles are used
 #in your Shepherd Project instance.
 roleDefinition0 = Administrator with full, unlimited access to all functions of the Shepherd Project EXCEPT full data deleting, which requires the 'destroyer' role.
-roleDefinition1 = Can execute the DeleteAllDataPermanently servlet, which PERMANENTLY destroys all data in the Shepherd Project. CAREFUL!
+roleDefinition1 = Can process images, such as adding keywords.
+roleDefinition2 = A manager can edit all data but does not have administrative-level privileges.
+roleDefinition3 = Subject matter expert who reviews unreleased materials.
+roleDefinition4 = Base level local permission for non-researchers.
+roleDefinition5 = Receives added privileges and is a known and trusted individual.
+roleDefinition6 = Can approve encounters.
+roleDefinition7 = Can set the identifier.
+roleDefinition8 = Can create adoptions.
+roleDefinition9 = Mozambique permissions.
+roleDefinition10 = SouthAfrica permissions.
+roleDefinition11 = AustraliaEast permissions.
+roleDefinition12 = AustraliaWest permissions.
+roleDefinition13 = Brazil permissions.
+roleDefinition14 = Ecuador permissions.
+roleDefinition15 = Thailand permissions.
+roleDefinition16 = Myanmar permissions.
+roleDefinition17 = Indonesia permissions.
+roleDefinition18 = Palau permissions.
+roleDefinition19 = Japan permissions.
+roleDefinition20 = MexicoRevillagigedos permissions.
+roleDefinition21 = Hawaii permissions.
+roleDefinition22 = Maldives permissions.
+roleDefinition23 = Peru permissions.
+roleDefinition24 = New Zealand permissions.
