--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -90,81 +90,91 @@
                 #view the web pages in the secure
                 #and admin areas
                 [urls]
-                
-                /appadmin/** = authc, roles[admin]
-                /logs/** = authc, roles[admin]
-                /xcalendar/** = authc, roles[admin]
-                /encounters/allEncountersUnapproved.jsp = authc, roles[admin]
-                /InterconnectSubmitSpots = authc, roles[admin]
-		/interconnectSubmitSpots= authc, roles[admin]
-		/GenePopExport = authc, roles[admin]
-		/individualSearch.jsp = authc, roles[admin]
-		/individualSearchResults.jsp = authc, roles[admin]
-		/individualSearchResultsExport.jsp = authc, roles[admin]
-		/individualSearchResultsAnalysis.jsp = authc, roles[admin]
-		/individualMappedSearchResults.jsp = authc, roles[admin]
-		/individualThumbnailSearchResults.jsp = authc, roles[admin]
-		/encounters/thumbnailSearch.jsp = authc, roles[admin]
-		 /encounters/thumbnailSearchResults.jsp = authc, roles[admin]
-		 /encounters/encounterSearch.jsp = authc, roles[admin]
-		 /encounters/searchResults.jsp = authc, roles[admin]
-		 /encounters/searchResultsAnalysis.jsp = authc, roles[admin]
-		 /encounters/mappedSearchResults.jsp = authc, roles[admin]
-		 /encounters/mappedSearchResultsSex.jsp = authc, roles[admin]
-		 /encounters/mappedSearchResultsHaplotype.jsp = authc, roles[admin]
-		 /encounters/exportSearchResults.jsp = authc, roles[admin]
-		 /googleSearch.jsp = authc, roles[admin]
-		 /googleSearchResults.jsp = authc, roles[admin]
-		 /encounters/imageViewer.jsp = authc, roles[admin]
-		 /encounters/searchComparison.jsp = authc, roles[admin]
-      		/encounters/searchComparisonResults.jsp = authc, roles[admin]
-                /encounters/encounterSpotVisualizer.jsp = authc, roles[admin]
-		/IndividualSetAlternateID = authc, roles[admin]
-		 /EncounterSetAlternateID = authc, roles[admin]
-		 /EncounterSetState = authc, roles[admin]
-		 /EncounterSetScarring = authc, roles[admin]
-		  /EncounterSetVerbatimEventDate = authc, roles[admin]
-		  /EncounterSetLifeStage = authc, roles[admin]
-		  /EncounterSetCountry = authc, roles[admin]
-		  /EncounterSetTissueSample = authc, roles[admin]
-		   /TissueSampleSetHaplotype = authc, roles[admin]
-		   /TissueSampleSetMeasurement = authc, roles[admin]
-		  /TissueSampleRemoveHaplotype = authc, roles[admin]
-		   /TissueSampleRemoveBiologicalMeasurement = authc, roles[admin]
-		   /ImportSRGD = authc, roles[admin]
-		        /IndividualCreate = authc, roles[admin]
-		        /OccurrenceCreate = authc, roles[admin]
-		        /OccurrenceRemoveEncounter = authc, roles[admin]
-		        /IndividualRemoveEncounter = authc, roles[admin]
-		        /OccurrenceAddEncounter = authc, roles[admin]
-		        /IndividualAddEncounter = authc, roles[admin]
-		         /TissueSampleSetSexAnalysis = authc, roles[admin]
-		        /TissueSampleRemoveSexAnalysis = authc, roles[admin]
-		         /EncounterRemoveTissueSample = authc, roles[admin]
-		         /EncounterRemoveImage = authc, roles[admin]
-		         /SinglePhotoVideoRemoveKeyword = authc, roles[admin]
-		         /SinglePhotoVideoAddKeyword = authc, roles[admin]
-		         /EncounterSearchExportGeneGISFormat = authc, roles[admin]
-		         /EncounterSearchExportKML = authc, roles[admin]
-		         /UserCreate = authc, roles[admin]
-		         /UserDelete = authc, roles[admin]
-		         /EncounterSearchExportExcelFile = authc, roles[admin]
-		         /EncounterSearchExportShapefile = authc, roles[admin]
-		         /EncounterSearchExportEmailAddresses = authc, roles[admin]
-		         /EncounterAddComment = authc, roles[admin]
-		         /OccurrenceAddComment = authc, roles[admin]
-		          /OccurrenceSetIndividualCount = authc, roles[admin]
-		         /IndividualAddComment = authc, roles[admin]
-		         /SimpleCMROutput = authc, roles[admin]
-		             /GenalexExportCodominantMSDataBySize = authc, roles[admin]
-		             /SOCPROGExport = authc, roles[admin]
-		             /OccurrenceSetGroupBehavior = authc, roles[admin]
-		             /EncounterSetBehavior = authc, roles[admin]
-		      /CJS = authc, roles[admin]
-		      /software.jsp = authc, roles[admin]
-		      /interconnect/mac/Interconnect.jar = authc, roles[admin]
-      			/DeleteAllDataPermanently = authc, roles[destroyer]
-      			/encounters/searchExport = authc, roles[admin]
+                /appadmin/admin.jsp = authc, roles[admin]
+		                /appadmin/import.jsp = authc, roles[admin]
+		                /appadmin/kwAdmin.jsp = authc, roles[admin]
+		                /appadmin/logs.jsp = authc, roles[admin]
+		                /appadmin/stats.jsp = authc, roles[admin]
+		                /appadmin/users.jsp = authc, roles[admin]
+		                /MassSetInformOthers = authc, roles[admin]
+		                /MassExposeGBIF = authc, roles[admin]
+		                /MassSetLocationCodeFromLocationString = authc, roles[admin]
+		                /MassSwapLocationCode = authc, roles[admin]
+		                /logs/** = authc, roles[admin]
+		                /UserCreate = authc, roles[admin]
+				 /UserDelete = authc, roles[admin]
+				 /appadmin/scanTaskAdmin.jsp = authc, roles[researcher]
+		                /xcalendar/** = authc, roles[researcher]
+		                /encounters/allEncountersUnapproved.jsp = authc, roles[researcher]
+		                /InterconnectSubmitSpots = authc, roles[imageProcessor]
+				/interconnectSubmitSpots= authc, roles[imageProcessor]
+				/GenePopExport = authc, roles[researcher]
+				/individualSearch.jsp = authc, roles[researcher]
+				/individualSearchResults.jsp = authc, roles[researcher]
+				/individualSearchResultsExport.jsp = authc, roles[researcher]
+				/individualSearchResultsAnalysis.jsp = authc, roles[researcher]
+				/individualMappedSearchResults.jsp = authc, roles[researcher]
+				/individualThumbnailSearchResults.jsp = authc, roles[researcher]
+				/encounters/thumbnailSearch.jsp = authc, roles[researcher]
+				 /encounters/thumbnailSearchResults.jsp = authc, roles[researcher]
+				 /encounters/encounterSearch.jsp = authc, roles[researcher]
+				 /encounters/searchResults.jsp = authc, roles[researcher]
+				 /encounters/searchResultsAnalysis.jsp = authc, roles[researcher]
+				 /encounters/mappedSearchResults.jsp = authc, roles[researcher]
+				 /encounters/mappedSearchResultsSex.jsp = authc, roles[researcher]
+				 /encounters/mappedSearchResultsHaplotype.jsp = authc, roles[researcher]
+				 /encounters/exportSearchResults.jsp = authc, roles[researcher]
+				 /googleSearch.jsp = authc, roles[researcher]
+				 /googleSearchResults.jsp = authc, roles[researcher]
+				 /encounters/imageViewer.jsp = authc, roles[researcher]
+				 /encounters/searchComparison.jsp = authc, roles[researcher]
+		      		/encounters/searchComparisonResults.jsp = authc, roles[researcher]
+		                /encounters/encounterSpotVisualizer.jsp = authc, roles[researcher]
+				/IndividualSetAlternateID = authc, roles[researcher]
+				 /EncounterApprove = authc, roles[approve]
+				 /EncounterSetAlternateID = authc, roles[researcher]
+				 /EncounterSetState = authc, roles[researcher]
+				 /EncounterSetScarring = authc, roles[researcher]
+				  /EncounterSetVerbatimEventDate = authc, roles[researcher]
+				  /EncounterSetLifeStage = authc, roles[researcher]
+				  /EncounterSetCountry = authc, roles[researcher]
+				  /EncounterSetTissueSample = authc, roles[researcher]
+				   /TissueSampleSetHaplotype = authc, roles[researcher]
+				   /TissueSampleSetMeasurement = authc, roles[researcher]
+				  /TissueSampleRemoveHaplotype = authc, roles[researcher]
+				   /TissueSampleRemoveBiologicalMeasurement = authc, roles[researcher]
+				   /ImportSRGD = authc, roles[admin]
+				        /IndividualCreate = authc, roles[identifier]
+				        /OccurrenceCreate = authc, roles[researcher]
+				        /OccurrenceRemoveEncounter = authc, roles[researcher]
+				        /IndividualRemoveEncounter = authc, roles[identifier]
+				        /OccurrenceAddEncounter = authc, roles[researcher]
+				        /IndividualAddEncounter = authc, roles[identifier]
+				         /TissueSampleSetSexAnalysis = authc, roles[researcher]
+				        /TissueSampleRemoveSexAnalysis = authc, roles[researcher]
+				         /EncounterRemoveTissueSample = authc, roles[researcher]
+				         /EncounterRemoveImage = authc, roles[researcher]
+				         /SinglePhotoVideoRemoveKeyword = authc, roles[researcher]
+				         /SinglePhotoVideoAddKeyword = authc, roles[researcher]
+				         /EncounterSearchExportGeneGISFormat = authc, roles[researcher]
+				         /EncounterSearchExportKML = authc, roles[researcher]
+				         /EncounterSearchExportExcelFile = authc, roles[researcher]
+				         /EncounterSearchExportShapefile = authc, roles[researcher]
+				         /EncounterSearchExportEmailAddresses = authc, roles[researcher]
+				         /EncounterAddComment = authc, roles[researcher]
+				         /OccurrenceAddComment = authc, roles[researcher]
+				          /OccurrenceSetIndividualCount = authc, roles[researcher]
+				         /IndividualAddComment = authc, roles[researcher]
+				         /SimpleCMROutput = authc, roles[researcher]
+				             /GenalexExportCodominantMSDataBySize = authc, roles[researcher]
+				             /SOCPROGExport = authc, roles[researcher]
+				             /OccurrenceSetGroupBehavior = authc, roles[researcher]
+				             /EncounterSetBehavior = authc, roles[researcher]
+				      /CJS = authc, roles[researcher]
+				      /software.jsp = authc, roles[researcher]
+				      /interconnect/mac/Interconnect.jar = authc, roles[researcher]
+		      			/DeleteAllDataPermanently = authc, roles[destroyer]
+		      			/encounters/searchExport = authc, roles[researcher]
       			/welcome.jsp = authc
                
 
