Fixing config issues and adding locationID2 support

--- a/src/main/resources/bundles/commonConfiguration.properties
+++ b/src/main/resources/bundles/commonConfiguration.properties
@@ -17,51 +17,55 @@
 # Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 #
 
-#name (NOT PATH!) of the directory in which to store project image data
-#if you set this value to myCustomDirName, then your web server must also be able to resolve /myCustomDirName on its root URL
+#file system folder in which encounter data will be stored (e.g. photos)
+#imageLocation=encounters 
+
+#base url of the web site
+urlLocation=www.whaleshark.org
+
+#file system folder in which marked individual data will be stored (e.g. data files)
+#markedIndividualDirectoryLocation=individuals 
+
+#file system folder in which adoption data will be stored (e.g. photos)
+#adoptionLocation=adoptions
+
 dataDirectoryName = shepherd_data_dir
 
+#URL to the graphic to be displayed at the top of every page through header.jsp
+urlToMastheadGraphic=images/masthead.jpg
+
+#URL to the graphic to be displayed at the bottom of every page through footer.jsp
+urlToFooterGraphic=images/lib_bottom.gif
+footerGraphicAlt=Powered by ECOCEAN USA
 
 #Unique identifier prefix for use with sharing digital biodiversity records (e.g. GBIF, OBIS)
-#This parameter does not affect Shepherd Project behavior except when exporting Excel files for use with the GBIF, iOBIS, etc.
-GlobalUniqueIdentifierPrefix=MY_CATALOG:MY_SPECIES:
+GlobalUniqueIdentifierPrefix=ECOCEAN:RTYPUS:
 
 # set wikiLocation to point to your wiki to enable integration, e.g.
-#wikiLocation=http://localhost:8080/wiki/doku.php?id=
+wikiLocation=http://www.whaleshark.org/wiki/doku.php?id=
 
 #whether to display and allow adoptions - set to true for yes and false for no
-allowAdoptions = false
+allowAdoptions = true
 
 #email addresses and parameters
-sendEmailNotifications=false
-autoEmailAddress=webmaster@someplace.org
-newSubmissionEmail=submissions@someplace.org
+sendEmailNotifications=true
+autoEmailAddress=webmaster@whaleshark.org
+newSubmissionEmail=submissions@whaleshark.org
 mailHost=localhost
 removeEmailString=Do you want to REMOVE your email address from this database? Click the link below to remove it. You will no longer receive updates on your encounters.
 
 #HTML metadata for each page
-htmlDescription=A text description of your mark-recapture project
-htmlKeywords=A bunch of keywords to help search engines categorize your web site
-htmlTitle=My Mark-Recapture Project for Species X
 cssURLLocation=css/ecocean.css
 htmlShortcutIcon=images/favicon.ico
-htmlAuthor=My Research Group
+htmlAuthor=ECOCEAN USA - info@ecoceanusa.org
+htmlDescription=The ECOCEAN Whale Shark Photo-identification Library is a visual database of whale shark (Rhincodon typus) encounters and of individually catalogued whale sharks. The library is maintained and used by marine biologists to collect and analyse whale shark encounter data to learn more about these amazing creatures.
+htmlKeywords=whale shark,whale,shark,Rhincodon typus,requin balleine,Rhineodon,Rhiniodon,big fish,ECOCEAN USA, fish, coral, sharks, elasmobranch, mark, recapture, photo-identification, identification, conservation, citizen science
+htmlTitle=ECOCEAN Whale Shark Photo-identification Library
 
-#URL to the graphic to be displayed at the top of every page through header.jsp
-urlToMastheadGraphic=/${pom.artifactId}-${pom.version}/images/masthead.jpg
+#Google Service keys for Search and Maps
+googleMapsKey = ABQIAAAAmb5-A-em_VabiiSEGZpvmRT7GEzM2PWHgJK1ajM92gf9ek7Z_BQbkPV_6CZKieqpp8NM-n4cnUGyrw
+googleSearchKey = 001757959497386081976:n08dpv5rq-m
 
-#URL to the graphic to be displayed at the bottom of every page through footer.jsp
-urlToFooterGraphic=/${pom.artifactId}-${pom.version}/images/lib_bottom.gif
-footerGraphicAlt=Powered by ECOCEAN USA Shepherd Project
-
-
-#Google Service keys for Search
-googleSearchKey=ABQIAAAAmb5-A-em_VabiiSEGZpvmRRTprTin5h_0-odPYUGB6h2YV9tQBSSk7LPXt9jxgaFm7Pt0GVfRimDdw
-
-
-
-#pattern recognition
-useSpotPatternRecognition=true
 
 #Modified Groth algorithm parameters for spot pattern recognition
 R=8
@@ -71,20 +75,19 @@ maxTriangleRotation=30
 C=0.99
 
 #Other common properties used for some data export (e.g. Encounter Search Excel export)
-citation=Lastname, Firstname. My species mark-recapture software library. MyURL.
-institutionCode=myInstitution
-catalogCode=myCatalog
+citation=Holmberg J, Arzoumanian Z, and Norman B. ECOCEAN Whale Shark Photo-identification Library version 2013. www.whaleshark.org
+kingdom=Animalia
+phylum=Chordata
+class=Chondrichthyes
+order=Orectolobiformes
+family=Rhincodontidae
+genus=Rhincodon
+species=Rhincodon typus
+institutionCode=ECOCEAN
+catalogCode=RhincodonTypus
 
-#for single species libraries, fill out these fields
-kingdom=whichKingdom
-phylum=whichPhylum
-class=whichClass
-order=whichOrder
-family=whichFamily
-genus=whichGenus
-species=whichSpecies
-
-
+#pattern recognition
+useSpotPatternRecognition=true
 
 #nicknames
 allowNicknames=true
@@ -93,57 +96,51 @@ allowNicknames=true
 isCatalogEditable = true
 
 #TapirLink-related settings
-#tapirLinkURL = http://localhost:8080/tapirlink/admin/configurator.php
+tapirLinkURL = http://www.whaleshark.org/tapirlink/admin/configurator.php
 
 #GBIF IPT-related settings
-#iptURL = http://localhost:8080/ipt-2.0.2
+iptURL = http://www.whaleshark.org/ipt-2.0.2
 
 #show EXIF data
 showEXIF = true
+
 
 #show taxonomy
 showTaxonomy = false
 
 #for multi-species libraries, fill out the genus and species for each supported animal type, starting with genusSpecies0
-#you can alow for more complex options and descriptors, such as:
-#example 1: genusSpecies0 = Megaptera novaengilae, Humpback whale -- this example with the comma delimiter helps users pick the correct scientific name from a list with more common names
-#example 2: genusSpecies1 = Unknown_whale_and_dolphin
-#genusSpecies0=genus specificEpithet
+#genusSpecies0=Rhincodon typus
 #genusSpecies1=genus specificEpithet
 #genusSpecies2=genus specificEpithet
 
+#elevation/depth
+maximumElevationInMeters = false
+maximumDepthInMeters = true
+
 #show lifeStage
-showLifestage = true
+showLifestage = false
 
 #defined life stages
-lifeStage0=juvenile
-lifeStage1=sub-adult
-lifeStage2=adult
+#lifeStage0=juvenile
+#lifeStage1=sub-adult
+#lifeStage2=adult
 
 #show measurements
 showMeasurements = true
 
 #Measurements
-measurement0=weight
-measurementUnits0=kilograms
-measurement1=length
-measurementUnits1=meters
-measurement2=height
-measurementUnits2=meters
+measurement0=length
+measurementUnits0=meters
+
 
 #Sampling Protocol for Measurements
-samplingProtocol0=estimate
-samplingProtocol1=measure
+samplingProtocol0=personal guess
+samplingProtocol1=guess of guide/researcher
+samplingProtocol2=directly measured
 
-#show elevation/depth
-maximumElevationInMeters = true
-maximumDepthInMeters = true
-
-#show size for encounters
-showSize = true
 
 #project-related variables
-application.version=${pom.version}
+application.version=shepherd-3.3.0-EXPERIMENTAL
 
 #genetic parameters
 numLoci = 14
@@ -162,7 +159,7 @@ satelliteTagName0=Wild Life Computers
 satelliteTagName1=SirTack
 
 #releaseDate
-showReleaseDate=true
+showReleaseDate=false
 #Following releaseDateFormat must be readable by java.text.SimpleDateFormat
 releaseDateFormat=dd/MM/yyyy
 
@@ -171,40 +168,11 @@ encounterState0=unapproved
 encounterState1=approved
 encounterState2=unidentifiable
 
-#limit Encounter.locationID to these values
-#locationID0 = location0
-#locationID1 = location 1
-
-#whether to show country field as a location
-showCountry = true
-
-#associated country if observation
-country0 = American Samoa 
-country1 = Australia 
-country2 = Cook Islands
-country3 = Federated States of Micronesia
-country4 = Fiji
-country5 = France 
-country6 = French Polynesia
-country7 = Guam
-country8 = Kiribati
-country9 = Marshall Islands
-country10 = Nauru
-country11 = New Caledonia
-country12 = New Zealand 
-country13 = Niue
-country14 = Northern Mariana Islands
-country15 = Palau
-country16 = Papua New Guinea 
-country17 = Samoa
-country18 = Solomon Islands
-country19 = Tokelau
-country20 = Tonga
-country21 = Tuvalu
-country22 = United Kingdom 
-country23 = United States of America 
-country24 = Vanuatu
-country25 = Wallis and Futuna
+#Occurrence object groupBehavior presetsapplicat
+#If none are pre-defined, the application allows this to be a fill-in field
+#occurrenceGroupBehavior0=feeding
+#occurrenceGroupBehavior1=mating
+#occurrenceGroupBehavior2=traveling
 
 #tissue sample types
 tissueType0 = Tissue sample
@@ -232,12 +200,133 @@ biologicalMeasurementSamplingProtocols2 = No lipids extracted, uncorrected
 #This value is used for encounter images and videos as well as for file associations added to a MarkedIndividual.
 maxMediaSize = 40
 
+showCountry = false
+
 #Security roles available in this Shepherd Project
 #These must be mapped to URLs in the Apache Shiro configuration filter of web.xml
 role0 = admin
-role1 = destroyer
+role1 = imageProcessor
+role2 = manager
+role3 = reviewer
+role4 = local
+role5 = researcher
+role6 = approve
+role7 = identifier
+role8 = adoption
+role9 = 1a
+role10 = 1a1
+role11 = 1a2
+role12 = 1b
+role13 = 1c
+role14 = 1d
+role15= 1e
+role16 = 1f
+role17 = 1g
+role18 = 2
+role19 = 2a
+role20 = 2b
+role21 = 2c
+role22 = 2d
+role23 = 2e
+role24 = 2e1
+role25 = 2f
+role26 = 2g
+role27 = 4a
+role28 = 4a1
+role29 = 4b
+role30 = 4c
+role31 = 4d
+role32 = 4e
+role33 = 4f
+role34 = 4g
+role35 = 4g1
+role36 = 4h
+role37 = 4h1
+role38 = 4h1a
+role39 = 4h2
+role40 = 4h2a
+role41 = 4h2b
+role42 = 4h2c
+role43 = 4h3
+role44 = 4h4
+role45 = 5a
+role46 = 5b
+role47 = 6a
+role48 = 6a1
+role49 = 6a2
+role50 = 6a3
+role51 = 6b
+role52 = 7
+role53 = 7a
+role54 = 7b
+role55 = 7c
+role56 = 7d
+role57 = 8a
+
 
 #Security role definitions, as displayed in user.jsp. These help keep track of how and why roles are used
 #in your Shepherd Project instance.
 roleDefinition0 = Administrator with full, unlimited access to all functions of the Shepherd Project EXCEPT full data deleting, which requires the 'destroyer' role.
-roleDefinition1 = Can execute the DeleteAllDataPermanently servlet, which PERMANENTLY destroys all data in the Shepherd Project. CAREFUL!
+roleDefinition1 = Can process images, such as adding keywords.
+roleDefinition2 = A manager can edit all data but does not have administrative-level privileges.
+roleDefinition3 = Subject matter expert who reviews unreleased materials.
+roleDefinition4 = Base level local permission for non-researchers.
+roleDefinition5 = Receives added privileges and is a known and trusted individual.
+roleDefinition6 = Can approve encounters.
+roleDefinition7 = Can set the identifier.
+roleDefinition8 = Can create adoptions.
+roleDefinition9 = General Ningaloo research permissions.
+roleDefinition10 = North Ningaloo research permissions.
+roleDefinition11 = South Ningaloo research permissions.
+roleDefinition12 = Christmas Island research permissions.
+roleDefinition13 = Indonesia research permissions.
+roleDefinition14 = Malaysia research pemissions.
+roleDefinition15 = Thailand research permisions.
+roleDefinition16 = Myanmar research permisions.
+roleDefinition17 = India research permissions.
+roleDefinition18 = General Atlantic and Caribbean.
+roleDefinition19 = Honduras research permissions.
+roleDefinition20 = Belize research permissions.
+roleDefinition21 = Atlantic Mexico research permissions.
+roleDefinition22 = Texas Flower Gardens research permissions.
+roleDefinition23 = U.S. Gulf Coast permissions.
+roleDefinition24 = Ewing Banks permissions.
+roleDefinition25 = Cuba permissions.
+roleDefinition26 = Eastern United States coastal permissions.
+roleDefinition27 = Mozambique permissions.
+roleDefinition28 = Tofo, Mozambique permissions.
+roleDefinition29 = Tanzania permissions.
+roleDefinition30 = Kenya permissions.
+roleDefinition31 = South Africa permissions.
+roleDefinition32 = Djibouti permissions.
+roleDefinition33 = Madagscar permissions.
+roleDefinition34 = Red Sea permissions.
+roleDefinition35 = Shib Habil, Red Sea permissions.
+roleDefinition36 = Arabian Peninsula permissions.	
+roleDefinition37 = Qatar permissions.
+roleDefinition38 = Al Shaheen permissions.  
+roleDefinition39 = Oman permissions. 
+roleDefinition40 = Musandam permissions.   
+roleDefinition41 = Daymaniyat Islands permissions.  
+roleDefinition42 = Muscat permissions.
+roleDefinition43 = UAE permissions.
+roleDefinition44 = Bahrain permissions.
+roleDefinition45 = Maldives permissions.
+roleDefinition46 = Seychelles permissions.
+roleDefinition47 = Non-specific Philippines permissions.
+roleDefinition48 = Donsol, Philippines permissions.
+roleDefinition49 = Cebu, Philippines permissions.
+roleDefinition50 = Limasawa Isl., S. Leyte, Philippines permissions.
+roleDefinition51 = Taiwan permissions.
+roleDefinition52 = Eastern Pacific permissions.
+roleDefinition53 = Galapagos Islands permissions.
+roleDefinition54 = Cocos Island permissions.
+roleDefinition55 = Panama, Pacific permissions.
+roleDefinition56 = Bahia de los Angeles, Mexico, Pacific permissions.
+roleDefinition57 = Eastern Australian Coast permissions.
+
+
+
+
+
+
