--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -98,6 +98,7 @@
                 /InterconnectSubmitSpots = authc, roles[admin]
 		/interconnectSubmitSpots= authc, roles[admin]
 		/GenePopExport = authc, roles[admin]
+		/ResetCommonConfiguration = authc, roles[admin]
 		/individualSearch.jsp = authc, roles[admin]
 		/individualSearchResults.jsp = authc, roles[admin]
 		/individualSearchResultsExport.jsp = authc, roles[admin]
@@ -393,6 +394,11 @@
   <servlet>
     <servlet-name>DontTrack</servlet-name>
     <servlet-class>org.ecocean.servlet.DontTrack</servlet-class>
+  </servlet>
+  
+    <servlet>
+      <servlet-name>ResetCommonConfiguration</servlet-name>
+      <servlet-class>org.ecocean.servlet.ResetCommonConfiguration</servlet-class>
   </servlet>
 
   <servlet>
@@ -878,6 +884,11 @@
     <servlet-mapping>
       <servlet-name>TissueSampleSetHaplotype</servlet-name>
       <url-pattern>/TissueSampleSetHaplotype</url-pattern>
+  </servlet-mapping>
+  
+      <servlet-mapping>
+        <servlet-name>ResetCommonConfiguration</servlet-name>
+        <url-pattern>/ResetCommonConfiguration</url-pattern>
   </servlet-mapping>
   
       <servlet-mapping>
