Further security refinements for 3.3.1

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -76,6 +76,7 @@
                 #IniShiroFilter will inject that object into the SecurityManager
                 [main]
                 realmA = org.ecocean.security.ShepherdRealm
+                roles.unauthorizedUrl = /accessDenied.jsp 
                 
                 #this application will use all the default
                 #filters (see link above)
