--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -151,6 +151,7 @@
 		         /EncounterSearchExportKML = authc, roles[admin]
 		         /UserCreate = authc, roles[admin]
 		         /UserDelete = authc, roles[admin]
+		         /UserAddProfileImage = authc, roles[admin]
 		         /EncounterSearchExportExcelFile = authc, roles[admin]
 		         /EncounterSearchExportShapefile = authc, roles[admin]
 		         /EncounterSearchExportEmailAddresses = authc, roles[admin]
@@ -317,6 +318,11 @@
   <servlet>
     <servlet-name>EncounterSetInformOthers</servlet-name>
     <servlet-class>org.ecocean.servlet.EncounterSetInformOthers</servlet-class>
+  </servlet>
+  
+    <servlet>
+      <servlet-name>UserAddProfileImage</servlet-name>
+      <servlet-class>org.ecocean.servlet.UserAddProfileImage</servlet-class>
   </servlet>
 
 
@@ -627,6 +633,11 @@
   <servlet>
     <servlet-name>MassSetLocationCodeFromLocationString</servlet-name>
     <servlet-class>org.ecocean.servlet.MassSetLocationCodeFromLocationString</servlet-class>
+  </servlet>
+  
+    <servlet>
+      <servlet-name>UserAddProfileImage</servlet-name>
+      <servlet-class>org.ecocean.servlet.UserAddProfileImage</servlet-class>
   </servlet>
 
   <servlet>
